<resources>
    <string name="app_name">Disco Druid</string>
    <string name="storage_permission">Storage Permissions</string>
    <string name="settings">Settings</string>
    <string name="str_package">package</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">Song Name</string>
    <string name="album_name">Album Name</string>
    <string name="artist_name">Artist name</string>
    <string name="_00_00">00:00</string>
    <string name="_03_30">03:30</string>
    <string name="content_description">content_description</string>
    <string name="media_channel_name">Media Controls</string>
    <string name="current_queue">Current Queue</string>
    <string name="new_playlist">New Playlist</string>
    <string name="queue">Queue</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="playlist_name">Playlist Name</string>
</resources>
