<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:elevation="4dp"
    android:fitsSystemWindows="true"
    app:behavior_hideable="false"
    app:behavior_peekHeight="110dp"
    android:background="@drawable/bottom_sheet_bg"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <ImageView
        android:id="@+id/bottom_sheet_arrow"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:src="@android:drawable/arrow_up_float"
        android:contentDescription="@string/content_description" />
    <include layout="@layout/layout_bottom_view"
        android:id="@+id/bottom_collapsed_view" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_detail_recyclerView"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            tools:listitem="@layout/layout_track_detail" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/track_detail_songName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/track_detail_albumName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorSelectedTab"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/song_name"/>
            <TextView
                android:id="@+id/track_detail_albumName"
                app:layout_constraintTop_toBottomOf="@id/track_detail_songName"
                app:layout_constraintBottom_toTopOf="@id/track_detail_artistName"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableStart="@drawable/ic_album"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/album_name"/>
            <TextView
                android:id="@+id/track_detail_artistName"
                app:layout_constraintTop_toBottomOf="@id/track_detail_albumName"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:drawableStart="@drawable/ic_artist"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:textStyle="italic"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"
                android:text="@string/artist_name"/>
            <SeekBar
                android:id="@+id/track_detail_seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:progressTint="@color/colorSelectedTab"
                android:progressBackgroundTint="@color/colorSelectedTab"
                android:thumbTint="@color/colorSelectedTab"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/track_detail_artistName"
                app:layout_constraintVertical_chainStyle="spread_inside" />
            <TextView
                android:id="@+id/track_detail_current_pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_00_00"
                android:padding="2dp"
                android:textColor="@color/colorUnselectedTab"
                app:layout_constraintStart_toStartOf="@id/track_detail_seekBar"
                app:layout_constraintTop_toBottomOf="@id/track_detail_seekBar"/>
            <TextView
                android:id="@+id/track_detail_duration"
                android:text="@string/_03_30"
                android:textColor="@color/colorUnselectedTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="@id/track_detail_seekBar"
                app:layout_constraintTop_toBottomOf="@id/track_detail_seekBar"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/media_actions_ll"
                app:layout_constraintTop_toBottomOf="@id/track_detail_duration"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:background="#00000000"
                    android:id="@+id/track_detail_shuffleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/track_detail_prevBtn"
                    android:src="@drawable/ic_shuffle_off"
                    android:contentDescription="@string/content_description" />
                <ImageButton
                    android:background="#00000000"
                    android:id="@+id/track_detail_prevBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/track_detail_shuffleBtn"
                    app:layout_constraintEnd_toStartOf="@id/track_detail_playBtn"
                    android:src="@android:drawable/ic_media_previous"
                    android:contentDescription="@string/content_description" />
                <ImageButton
                    android:background="#00000000"
                    android:id="@+id/track_detail_playBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/track_detail_prevBtn"
                    app:layout_constraintEnd_toStartOf="@id/track_detail_nextBtn"
                    android:src="@android:drawable/ic_media_play"
                    android:contentDescription="@string/content_description" />
                <ImageButton
                    android:background="#00000000"
                    android:id="@+id/track_detail_nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/track_detail_playBtn"
                    app:layout_constraintEnd_toStartOf="@id/track_detail_repeatBtn"
                    android:src="@android:drawable/ic_media_next"
                    android:contentDescription="@string/content_description" />
                <ImageButton
                    android:background="#00000000"
                    android:id="@+id/track_detail_repeatBtn"
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/track_detail_nextBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_repeat_off"
                    android:contentDescription="@string/content_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>